@@ -23,14 +23,16 @@
  */
 package org.osate.aadl2.instantiation;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.Deque;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.IdentityHashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
-import java.util.Set;
-import java.util.Stack;
 
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.emf.common.util.BasicEList;
@@ -47,7 +49,6 @@ import org.osate.aadl2.EndToEndFlow;
 import org.osate.aadl2.EndToEndFlowElement;
 import org.osate.aadl2.EndToEndFlowSegment;
 import org.osate.aadl2.Feature;
-import org.osate.aadl2.FlowElement;
 import org.osate.aadl2.FlowImplementation;
 import org.osate.aadl2.FlowSegment;
 import org.osate.aadl2.FlowSpecification;
@@ -78,42 +79,45 @@ import org.osate.aadl2.modelsupport.modeltraversal.AadlProcessingSwitchWithProgr
 import org.osate.aadl2.modelsupport.util.AadlUtil;
 
 /**
+ * Instantiates declarative end-to-end flows for each component instance.
+ * <p>
+ * Flow discovery builds detached candidates with branch-local traversal state. A declaration may produce multiple
+ * candidates when several flow implementations, connection instances, access targets, or nested end-to-end flow
+ * variants match. Only completed candidates are attached to the component, in one commit after discovery finishes.
+ * Cancellation therefore leaves the component's existing end-to-end flows unchanged.
+ * <p>
+ * Nested end-to-end flows are expanded once per component context. Their leading and trailing declarative connection
+ * paths are retained so parent candidates can select compatible nested variants and continue after them.
+ * <p>
+ * Internal consistency failures throw {@link IllegalStateException} intentionally. Continuing after an invariant has
+ * failed could publish an instance model whose flow graph cannot be trusted.
+ *
  * @author lwrage
  */
 public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress {
 
 	static class FlowIterator implements Iterator<Element> {
 
-		private EList<EndToEndFlowSegment> eteSegments;
-
-		private EList<FlowSegment> flowSegments;
-
-		private int size;
+		private final List<? extends Element> segments;
 
 		private int index;
 
 		public FlowIterator(EndToEndFlow ete) {
-			eteSegments = ete.getAllFlowSegments();
-			size = eteSegments.size();
-			index = 0;
+			this(ete.getAllFlowSegments(), 0);
 		}
 
 		public FlowIterator(FlowImplementation flowImpl) {
-			flowSegments = flowImpl.getOwnedFlowSegments();
-			size = flowSegments.size();
-			index = 0;
+			this(flowImpl.getOwnedFlowSegments(), 0);
 		}
 
-		private FlowIterator(EList<EndToEndFlowSegment> eteSegments, EList<FlowSegment> flowSegments, int index) {
-			this.eteSegments = eteSegments;
-			this.flowSegments = flowSegments;
-			size = eteSegments != null ? eteSegments.size() : flowSegments.size();
+		private FlowIterator(List<? extends Element> segments, int index) {
+			this.segments = segments;
 			this.index = index;
 		}
 
 		@Override
 		public boolean hasNext() {
-			return index < size;
+			return index < segments.size();
 		}
 
 		@Override
@@ -121,35 +125,21 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 			if (!hasNext()) {
 				throw new NoSuchElementException();
 			}
-			return eteSegments != null ? eteSegments.get(index++) : flowSegments.get(index++);
+			return segments.get(index++);
 		}
 
-		@Override
-		public void remove() {
-			throw new UnsupportedOperationException();
-		}
-
-		/*
-		 * (non-Javadoc)
-		 *
-		 * @see java.lang.Object#clone()
-		 */
-		@Override
-		protected FlowIterator clone() {
-			return new FlowIterator(eteSegments, flowSegments, index);
+		private FlowIterator copy() {
+			return new FlowIterator(segments, index);
 		}
 	}
 
-	static class ETEInfo implements Cloneable {
+	static class ETEInfo {
 		List<Connection> preConns;
 		EndToEndFlowInstance etei;
-		List<Connection> postConns = new ArrayList<Connection>();
+		List<Connection> postConns = new ArrayList<>();
 
-		/**
-		 * @param etei
-		 */
 		public ETEInfo(EndToEndFlowInstance etei) {
-			preConns = new ArrayList<Connection>();
+			preConns = new ArrayList<>();
 			this.etei = etei;
 		}
 
@@ -159,11 +149,114 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 		}
 	}
 
-	private ETEInfo myInfo;
+	/**
+	 * Candidate discovery states. A failed candidate has no valid semantic continuation or belongs to a failed
+	 * declaration expansion. An aborted candidate could not append a resolved flow element because the instance model
+	 * did not satisfy the declaration.
+	 */
+	private enum CandidateStatus {
+		ACTIVE, COMPLETE, FAILED, ABORTED
+	}
 
-	private final Set<EndToEndFlowInstance> completedETEI = new HashSet<>();
+	private enum ExpansionStatus {
+		EXPANDING, COMPLETE, FAILED
+	}
 
-	private Stack<FlowIterator> state = new Stack<FlowIterator>();
+	private enum DiagnosticTarget {
+		OWNER, CANDIDATE, EXISTING_ELEMENT
+	}
+
+	private record PendingDiagnostic(long sequence, DiagnosticTarget target, FlowCandidate candidate,
+			Element existingElement, String message) {
+	}
+
+	/**
+	 * Expansion of one declarative end-to-end flow and all candidate paths derived from it.
+	 */
+	private static final class FlowExpansion {
+		private final EndToEndFlow declaration;
+		private final List<FlowCandidate> candidates = new ArrayList<>();
+		private ExpansionStatus status = ExpansionStatus.EXPANDING;
+
+		private FlowExpansion(EndToEndFlow declaration) {
+			this.declaration = declaration;
+		}
+	}
+
+	/**
+	 * A detached end-to-end flow instance under construction.
+	 */
+	private static final class FlowCandidate {
+		private final ComponentInstance owner;
+		private final FlowExpansion expansion;
+		private final EndToEndFlowInstance instance;
+		/*
+		 * Declarative connection paths before the first and after the last concrete flow element. Parent flows use these
+		 * paths to select compatible nested candidates and continue beyond them.
+		 */
+		private final List<Connection> preConnections;
+		private final List<Connection> postConnections = new ArrayList<>();
+		private final long sequence;
+		private CandidateStatus status = CandidateStatus.ACTIVE;
+
+		private FlowCandidate(ComponentInstance owner, FlowExpansion expansion, EndToEndFlowInstance instance,
+				List<Connection> preConnections, long sequence) {
+			this.owner = owner;
+			this.expansion = expansion;
+			this.instance = instance;
+			this.preConnections = preConnections;
+			this.sequence = sequence;
+		}
+	}
+
+	/**
+	 * Branch-local traversal data. Continuations resume enclosing declarations after descending into a flow
+	 * implementation or another nested construct; connections are the declarative path awaiting resolution to a
+	 * connection instance; flowImplementations constrain the source and destination features accepted for that
+	 * connection instance.
+	 */
+	private static final class TraversalState {
+		private final FlowCandidate candidate;
+		private final Deque<FlowIterator> continuations = new ArrayDeque<>();
+		private final List<Connection> connections = new ArrayList<>();
+		private final List<FlowImplementation> flowImplementations = new ArrayList<>();
+
+		private TraversalState(FlowCandidate candidate) {
+			this.candidate = candidate;
+		}
+
+		private TraversalState copy(FlowCandidate candidate) {
+			TraversalState copy = new TraversalState(candidate);
+			for (FlowIterator continuation : continuations) {
+				copy.continuations.addLast(continuation.copy());
+			}
+			copy.connections.addAll(connections);
+			copy.flowImplementations.addAll(flowImplementations);
+			return copy;
+		}
+	}
+
+	/**
+	 * All discovery and commit state for one component instance.
+	 */
+	private static final class FlowInstantiationContext {
+		private final ComponentInstance owner;
+		private final List<EndToEndFlowInstance> initialFlows;
+		private final Map<EndToEndFlow, FlowExpansion> expansions = new IdentityHashMap<>();
+		private final List<FlowExpansion> expansionOrder = new ArrayList<>();
+		private final List<FlowCandidate> candidates = new ArrayList<>();
+		private final Map<EndToEndFlowInstance, FlowCandidate> candidatesByInstance = new IdentityHashMap<>();
+		private final List<EndToEndFlow> activeDeclarations = new ArrayList<>();
+		private final List<PendingDiagnostic> diagnostics = new ArrayList<>();
+		private long nextCandidateSequence;
+		private long nextDiagnosticSequence;
+		private boolean canceled;
+
+		private FlowInstantiationContext(ComponentInstance owner) {
+			this.owner = owner;
+			initialFlows = List.copyOf(owner.getEndToEndFlows());
+		}
+	}
 
 	/**
 	 * A classifier for an instance object when it is a prototype in the
@@ -173,34 +266,13 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	 * feature or subprogram call. If the classifier is anonymous, then its
 	 * bindings are included also.
 	 */
-	private HashMap<InstanceObject, InstantiatedClassifier> classifierCache = null;
+	private final HashMap<InstanceObject, InstantiatedClassifier> classifierCache;
+
+	private FlowInstantiationContext activeContext;
+	private TraversalState activeState;
 
 	/**
-	 * The current list of declarative connections referenced in an ETE
-	 */
-	private List<Connection> connections = new ArrayList<Connection>();
-	private List<EndToEndFlowInstance> removeETEI = new ArrayList<EndToEndFlowInstance>();
-	private List<EndToEndFlowInstance> addETEI = new ArrayList<EndToEndFlowInstance>();
-	private final Set<EndToEndFlowInstance> abortedETEI = new HashSet<>();
-
-	/**
-	 * All end to end flow instances created for an end to end flow.
-	 */
-	private List<ETEInfo> created;
-
-	private HashMap<EndToEndFlow, List<ETEInfo>> ete2info;
-	private final List<EndToEndFlow> activeEndToEndFlows;
-	private final Set<EndToEndFlow> failedEndToEndFlows;
-
-	/**
-	 * The last flow implementation to match connection start
-	 * Relevant if a flow implementation goes straight through a subcomponent.
-	 * This can occur only for leaf components, such that no stack is needed.
-	 */
-	private Stack<FlowImplementation> lastFlowImpl = new Stack<FlowImplementation>();
-
-	/**
-	 * Create a new instance.
+	 * Create an end-to-end flow instantiation pass.
 	 *
 	 * @param pm the progress monitor
 	 * @param errMgr the error manager
@@ -209,23 +281,13 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	 */
 	public CreateEndToEndFlowsSwitch(final IProgressMonitor pm, final AnalysisErrorReporterManager errMgr,
 			HashMap<InstanceObject, InstantiatedClassifier> classifierCache) {
-		this(pm, errMgr, classifierCache, new ArrayList<>(), new HashSet<>());
-	}
-
-	private CreateEndToEndFlowsSwitch(final IProgressMonitor pm, final AnalysisErrorReporterManager errMgr,
-			HashMap<InstanceObject, InstantiatedClassifier> classifierCache,
-			List<EndToEndFlow> activeEndToEndFlows, Set<EndToEndFlow> failedEndToEndFlows) {
 		super(pm, PROCESS_PRE_ORDER_ALL, errMgr);
 		this.classifierCache = classifierCache;
-		this.activeEndToEndFlows = activeEndToEndFlows;
-		this.failedEndToEndFlows = failedEndToEndFlows;
 	}
 
 	@Override
 	protected final void initSwitches() {
 		instanceSwitch = new InstanceSwitch<String>() {
-			HashMap<EndToEndFlow, List<ETEInfo>> ete2info = new HashMap<EndToEndFlow, List<ETEInfo>>();
-
 			@Override
 			public String caseComponentInstance(final ComponentInstance ci) {
 				if (monitor.isCanceled()) {
@@ -237,32 +299,31 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 				if (ci.getContainingComponentInstance() instanceof SystemInstance) {
 					monitor.subTask("Creating end-to-end flows in " + ci.getName());
 				}
+				FlowInstantiationContext previousContext = activeContext;
+				TraversalState previousState = activeState;
+				FlowInstantiationContext context = new FlowInstantiationContext(ci);
+				activeContext = context;
+				activeState = null;
 				try {
 					impl = InstanceUtil.getComponentImplementation(ci, 0, classifierCache);
 					if (impl != null) {
 						for (EndToEndFlow ete : impl.getAllEndToEndFlows()) {
-							if (!ete2info.containsKey(ete)) {
-								instantiateAndCleanUpEndToEndFlow(ci, ete, ete2info);
-								for (EndToEndFlowInstance etei : removeETEI) {
-									ci.getEndToEndFlows().remove(etei);
-									addETEI.remove(etei);
-								}
-								if (addETEI.size() > 1) {
-									resetETECloneCount();
-									for (EndToEndFlowInstance etei : addETEI) {
-										setCloneName(etei);
-									}
-								}
-								removeETEI.clear();
-								addETEI.clear();
-								abortedETEI.clear();
+							if (monitor.isCanceled()) {
+								context.canceled = true;
+								cancelTraversal();
+								break;
+							}
+							if (!context.expansions.containsKey(ete)) {
+								instantiateEndToEndFlow(ci, ete, null);
 							}
 						}
 					}
+					if (!context.canceled && !monitor.isCanceled()) {
+						commit(context);
+					}
 				} finally {
-					ete2info.clear();
-					activeEndToEndFlows.clear();
-					failedEndToEndFlows.clear();
+					activeContext = previousContext;
+					activeState = previousState;
 				}
 				return DONE;
 			}
@@ -279,55 +340,280 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 		ETEInstanceCloneCount = 1;
 	}
 
-	private void instantiateAndCleanUpEndToEndFlow(ComponentInstance ci, EndToEndFlow ete,
-			HashMap<EndToEndFlow, List<ETEInfo>> ete2info) {
-		instantiateEndToEndFlow(ci, ete, ete2info);
-		for (EndToEndFlowInstance etei : removeETEI) {
-			ci.getEndToEndFlows().remove(etei);
-			addETEI.remove(etei);
-		}
-		if (addETEI.size() > 1) {
-			resetETECloneCount();
-			for (EndToEndFlowInstance etei : addETEI) {
-				setCloneName(etei);
-			}
-		}
-		removeETEI.clear();
-		addETEI.clear();
-	}
-
+	/**
+	 * Expand one declaration and optionally publish its legacy compatibility view. Internal callers pass {@code null};
+	 * the map parameter is retained for protected API compatibility.
+	 */
 	protected void instantiateEndToEndFlow(ComponentInstance ci, EndToEndFlow ete,
 			HashMap<EndToEndFlow, List<ETEInfo>> ete2info) {
-		EndToEndFlowInstance etei = InstanceFactory.eINSTANCE.createEndToEndFlowInstance();
-		resetETECloneCount();
-		created = new ArrayList<ETEInfo>();
-		ete2info.put(ete, created);
-		this.ete2info = ete2info;
+		FlowInstantiationContext previousContext = activeContext;
+		TraversalState previousState = activeState;
+		boolean standalone = activeContext == null;
+		if (standalone) {
+			activeContext = new FlowInstantiationContext(ci);
+		} else if (activeContext.owner != ci) {
+			// EndToEndFlow is not a FlowElement, so a nested ETE segment can only be expanded at its declaration's level.
+			throw new IllegalStateException("End-to-end flow expansion crossed component contexts");
+		}
 
+		try {
+			FlowExpansion expansion = expandEndToEndFlow(activeContext, ci, ete);
+			updateCompatibilityInfo(expansion, ete2info);
+			if (standalone && !activeContext.canceled && !monitor.isCanceled()) {
+				commit(activeContext);
+			}
+		} finally {
+			if (standalone) {
+				activeContext = previousContext;
+				activeState = previousState;
+			}
+		}
+	}
+
+	private FlowExpansion expandEndToEndFlow(FlowInstantiationContext context, ComponentInstance ci,
+			EndToEndFlow ete) {
+		FlowExpansion existing = context.expansions.get(ete);
+		if (existing != null) {
+			return existing;
+		}
+
+		FlowExpansion expansion = new FlowExpansion(ete);
+		context.expansions.put(ete, expansion);
+		context.expansionOrder.add(expansion);
+		context.activeDeclarations.add(ete);
+
+		EndToEndFlowInstance etei = InstanceFactory.eINSTANCE.createEndToEndFlowInstance();
 		etei.setName(ete.getName());
 		etei.setEndToEndFlow(ete);
-		ci.getEndToEndFlows().add(etei);
-		addETEI.add(etei);
-		created.add(myInfo = new ETEInfo(etei));
-		EList<EList<ModeInstance>> ml = etei.getModesList();
-		ml.clear();
-		ml.add(getModeInstances(ci, ete));
-		activeEndToEndFlows.add(ete);
+		FlowCandidate candidate = createCandidate(context, expansion, etei, new ArrayList<>());
+		TraversalState previousState = activeState;
+		activeState = new TraversalState(candidate);
+		etei.getModesList().add(getModeInstances(ci, ete));
 		try {
 			processETE(ci, etei, ete);
 		} finally {
-			activeEndToEndFlows.remove(activeEndToEndFlows.size() - 1);
-			ml.clear();
-			if (failedEndToEndFlows.contains(ete)) {
-				for (ETEInfo info : created) {
-					ci.getEndToEndFlows().remove(info.etei);
-					addETEI.remove(info.etei);
-					removeETEI.remove(info.etei);
-					completedETEI.remove(info.etei);
+			context.activeDeclarations.removeLast();
+			if (monitor.isCanceled()) {
+				context.canceled = true;
+			}
+			if (expansion.status == ExpansionStatus.FAILED) {
+				for (FlowCandidate createdCandidate : expansion.candidates) {
+					createdCandidate.status = CandidateStatus.FAILED;
 				}
-				created.clear();
+			} else {
+				for (FlowCandidate createdCandidate : expansion.candidates) {
+					if (createdCandidate.status == CandidateStatus.ACTIVE) {
+						createdCandidate.status = createdCandidate.instance.getFlowElements().isEmpty()
+								? CandidateStatus.FAILED
+								: CandidateStatus.COMPLETE;
+					}
+				}
+				expansion.status = ExpansionStatus.COMPLETE;
+			}
+			activeState = previousState;
+		}
+		return expansion;
+	}
+
+	private FlowCandidate createCandidate(FlowInstantiationContext context, FlowExpansion expansion,
+			EndToEndFlowInstance instance, List<Connection> preConnections) {
+		FlowCandidate candidate = new FlowCandidate(context.owner, expansion, instance, preConnections,
+				context.nextCandidateSequence++);
+		expansion.candidates.add(candidate);
+		context.candidates.add(candidate);
+		context.candidatesByInstance.put(instance, candidate);
+		return candidate;
+	}
+
+	/**
+	 * Fork the active path before processing another alternative. Both the detached instance and every mutable traversal
+	 * structure must be copied so subsequent alternatives cannot modify one another.
+	 */
+	private TraversalState forkState(TraversalState source) {
+		EndToEndFlowInstance instance = EcoreUtil.copy(source.candidate.instance);
+		// Preserve accumulated mode constraints, which are not part of the copied flow-element containment tree.
+		instance.getModesList().addAll(source.candidate.instance.getModesList());
+		List<Connection> preConnections = source.candidate.instance.getFlowElements().isEmpty()
+				? new ArrayList<>()
+				: new ArrayList<>(source.candidate.preConnections);
+		FlowCandidate candidate = createCandidate(activeContext, source.candidate.expansion, instance, preConnections);
+		return source.copy(candidate);
+	}
+
+	private void updateCompatibilityInfo(FlowExpansion expansion, HashMap<EndToEndFlow, List<ETEInfo>> ete2info) {
+		if (ete2info == null) {
+			return;
+		}
+		List<ETEInfo> infos = new ArrayList<>();
+		for (FlowCandidate candidate : expansion.candidates) {
+			ETEInfo info = new ETEInfo(candidate.preConnections, candidate.instance);
+			info.postConns = candidate.postConnections;
+			infos.add(info);
+		}
+		ete2info.put(expansion.declaration, infos);
+	}
+
+	private FlowCandidate getCandidate(EndToEndFlowInstance etei) {
+		if (activeContext == null) {
+			throw new IllegalStateException("No active end-to-end flow instantiation context");
+		}
+		FlowCandidate candidate = activeContext.candidatesByInstance.get(etei);
+		if (candidate == null) {
+			throw new IllegalStateException("End-to-end flow instance is not part of the active context");
+		}
+		return candidate;
+	}
+
+	private TraversalState getState(EndToEndFlowInstance etei) {
+		FlowCandidate candidate = getCandidate(etei);
+		if (activeState == null || activeState.candidate != candidate) {
+			throw new IllegalStateException("End-to-end flow branch is not active");
+		}
+		return activeState;
+	}
+
+	private void reportOwnerError(FlowCandidate candidate, String message) {
+		activeContext.diagnostics.add(new PendingDiagnostic(activeContext.nextDiagnosticSequence++,
+				DiagnosticTarget.OWNER, candidate, null, message));
+	}
+
+	private void reportCandidateError(FlowCandidate candidate, String message) {
+		activeContext.diagnostics.add(new PendingDiagnostic(activeContext.nextDiagnosticSequence++,
+				DiagnosticTarget.CANDIDATE, candidate, null, message));
+	}
+
+	private void reportExistingElementError(FlowCandidate candidate, Element element, String message) {
+		activeContext.diagnostics.add(new PendingDiagnostic(activeContext.nextDiagnosticSequence++,
+				DiagnosticTarget.EXISTING_ELEMENT, candidate, element, message));
+	}
+
+	private String getProspectivePath(FlowCandidate candidate) {
+		return candidate.owner.getInstanceObjectPath() + "." + candidate.instance.getName();
+	}
+
+	private void failCandidate(FlowCandidate candidate) {
+		if (candidate.status == CandidateStatus.ACTIVE) {
+			candidate.status = CandidateStatus.FAILED;
+		}
+	}
+
+	private void abortCandidate(FlowCandidate candidate) {
+		candidate.status = CandidateStatus.ABORTED;
+	}
+
+	/**
+	 * Publish all completed candidates for a component. Candidate names are assigned deterministically, nested
+	 * references are checked before attachment, and modes are finalized with nested flows before their parents. If mode
+	 * finalization fails, attachment and transient mode state are rolled back before the exception is propagated.
+	 * Diagnostics are emitted only after a successful commit. Diagnostics for completed candidates target the attached
+	 * flow instance; diagnostics for discarded candidates target the owning component instance.
+	 */
+	private void commit(FlowInstantiationContext context) {
+		if (context.canceled || monitor.isCanceled()) {
+			return;
+		}
+		if (!context.owner.getEndToEndFlows().equals(context.initialFlows)) {
+			throw new IllegalStateException("End-to-end flow list changed during candidate discovery");
+		}
+
+		for (FlowExpansion expansion : context.expansionOrder) {
+			List<FlowCandidate> successful = expansion.candidates.stream()
+					.filter(candidate -> candidate.status == CandidateStatus.COMPLETE)
+					.sorted(Comparator.comparingLong(candidate -> candidate.sequence))
+					.toList();
+			if (successful.size() == 1) {
+				successful.get(0).instance.setName(expansion.declaration.getName());
+			} else if (successful.size() > 1) {
+				resetETECloneCount();
+				for (FlowCandidate candidate : successful) {
+					setCloneName(candidate.instance);
+				}
 			}
 		}
+
+		List<FlowCandidate> successful = context.candidates.stream()
+				.filter(candidate -> candidate.status == CandidateStatus.COMPLETE)
+				.sorted(Comparator.comparingLong(candidate -> candidate.sequence))
+				.toList();
+		for (FlowCandidate candidate : successful) {
+			for (FlowElementInstance element : candidate.instance.getFlowElements()) {
+				if (element instanceof EndToEndFlowInstance nested) {
+					FlowCandidate nestedCandidate = context.candidatesByInstance.get(nested);
+					if (nestedCandidate == null || nestedCandidate.status != CandidateStatus.COMPLETE) {
+						throw new IllegalStateException("Candidate references an unavailable end-to-end flow");
+					}
+				}
+			}
+		}
+
+		List<EndToEndFlowInstance> instances = successful.stream().map(candidate -> candidate.instance).toList();
+		Map<FlowCandidate, List<EList<ModeInstance>>> modeSnapshots = new IdentityHashMap<>();
+		Map<FlowCandidate, List<SystemOperationMode>> somSnapshots = new IdentityHashMap<>();
+		for (FlowCandidate candidate : successful) {
+			modeSnapshots.put(candidate, new ArrayList<>(candidate.instance.getModesList()));
+			somSnapshots.put(candidate, new ArrayList<>(candidate.instance.getInSystemOperationModes()));
+		}
+
+		context.owner.getEndToEndFlows().addAll(instances);
+		try {
+			Map<FlowCandidate, Boolean> finalized = new IdentityHashMap<>();
+			Map<FlowCandidate, Boolean> finalizing = new IdentityHashMap<>();
+			for (FlowCandidate candidate : successful) {
+				finalizeModes(context, candidate, finalized, finalizing);
+			}
+		} catch (RuntimeException | Error exception) {
+			context.owner.getEndToEndFlows().removeAll(instances);
+			for (FlowCandidate candidate : successful) {
+				candidate.instance.getModesList().clear();
+				candidate.instance.getModesList().addAll(modeSnapshots.get(candidate));
+				candidate.instance.getInSystemOperationModes().clear();
+				candidate.instance.getInSystemOperationModes().addAll(somSnapshots.get(candidate));
+			}
+			throw exception;
+		}
+
+		for (PendingDiagnostic diagnostic : context.diagnostics.stream()
+				.sorted(Comparator.comparingLong(PendingDiagnostic::sequence))
+				.toList()) {
+			switch (diagnostic.target()) {
+			case OWNER -> error(diagnostic.candidate().owner, diagnostic.message());
+			case CANDIDATE -> {
+				if (diagnostic.candidate().status == CandidateStatus.COMPLETE) {
+					error(diagnostic.candidate().instance, diagnostic.message());
+				} else {
+					error(diagnostic.candidate().owner,
+							diagnostic.candidate().instance.getName() + " could not be instantiated: "
+									+ diagnostic.message());
+				}
+			}
+			case EXISTING_ELEMENT -> error(diagnostic.existingElement(), diagnostic.message());
+			}
+		}
+	}
+
+	/**
+	 * Finalize a candidate's system operation modes after finalizing any nested candidates it references.
+	 */
+	private void finalizeModes(FlowInstantiationContext context, FlowCandidate candidate,
+			Map<FlowCandidate, Boolean> finalized, Map<FlowCandidate, Boolean> finalizing) {
+		if (finalized.containsKey(candidate)) {
+			return;
+		}
+		if (finalizing.put(candidate, Boolean.TRUE) != null) {
+			throw new IllegalStateException("Cyclic committed end-to-end flow graph");
+		}
+		for (FlowElementInstance element : candidate.instance.getFlowElements()) {
+			if (element instanceof EndToEndFlowInstance nested) {
+				FlowCandidate nestedCandidate = context.candidatesByInstance.get(nested);
+				if (nestedCandidate != null && nestedCandidate.status == CandidateStatus.COMPLETE) {
+					finalizeModes(context, nestedCandidate, finalized, finalizing);
+				}
+			}
+		}
+		fillinModes(candidate.instance);
+		candidate.instance.getModesList().clear();
+		finalizing.remove(candidate);
+		finalized.put(candidate, Boolean.TRUE);
 	}
 
 	protected void processETE(final ComponentInstance ci, final EndToEndFlowInstance etei, final EndToEndFlow ete) {
@@ -338,69 +624,72 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 * Add all flow instances that continue through the next flow element.
+	 * Consume one declarative flow segment. Connection declarations are accumulated until a concrete flow element
+	 * resolves them; other segment kinds delegate to their specialized traversal methods and may fork the candidate.
 	 *
 	 * @param ci the component instance we're in
 	 * @param etei the current flow instance
-	 * @param fe the next flow element
+	 * @param fs the next flow segment
 	 * @param iter the position in the current ETE declaration
 	 * @param errorElement the model element that we attach errors to
 	 */
 	protected void processETESegment(ComponentInstance ci, EndToEndFlowInstance etei, Element fs, FlowIterator iter,
 			NamedElement errorElement) {
-		final Element fe;
+		TraversalState traversal = getState(etei);
+		FlowCandidate candidate = traversal.candidate;
+		Element fe = switch (fs) {
+		case FlowSegment segment -> segment.getFlowElement();
+		case EndToEndFlowSegment segment -> segment.getFlowElement();
+		default -> throw new IllegalArgumentException("Unsupported flow segment " + fs.eClass().getName());
+		};
 
-		if (fs instanceof FlowSegment) {
-			fe = ((FlowSegment) fs).getFlowElement();
-		} else {
-			fe = ((EndToEndFlowSegment) fs).getFlowElement();
-		}
-
-		if (fe instanceof Connection) {
-			if (etei.getFlowElements() == null || etei.getFlowElements().isEmpty()) {
-				myInfo.preConns.add((Connection) fe);
+		if (fe instanceof Connection connection) {
+			if (etei.getFlowElements().isEmpty()) {
+				candidate.preConnections.add(connection);
 			} else {
-				connections.add((Connection) fe);
+				traversal.connections.add(connection);
 			}
-		} else {
-			if (fe instanceof FlowSpecification) {
-				final Subcomponent sc = (Subcomponent) (fs instanceof FlowSegment ? ((FlowSegment) fs).getContext()
-						: ((EndToEndFlowSegment) fs).getContext());
-				final ComponentInstance sci = ci.findSubcomponentInstance(sc);
-				if (sci != null) {
-					processSubcomponentFlow(sci, etei, (FlowSpecification) fe, iter);
-				} else {
-					error(etei.getContainingComponentInstance(),
-							"Incomplete End-to-end flow instance " + etei.getName()
-									+ ": Could not find component instance for subcomponent " + sc.getName()
-									+ " in flow implementation " + errorElement.getName());
-				}
-			} else if (fe instanceof Subcomponent) {
-				ComponentInstance sci = ci.findSubcomponentInstance((Subcomponent) fe);
-				processFlowStep(sci, etei, fe, iter);
-			} else if (fe instanceof DataAccess da) {
-				processAccess(ci, etei, da, iter);
-			} else if (fe instanceof SubprogramAccess sa) {
-				processAccess(ci, etei, sa, iter);
-			} else if (fe instanceof EndToEndFlow) {
-				processEndToEndFlow(ci, etei, (EndToEndFlow) fe, iter);
+		} else if (fe instanceof FlowSpecification flowSpecification) {
+			Subcomponent sc = (Subcomponent) switch (fs) {
+			case FlowSegment segment -> segment.getContext();
+			case EndToEndFlowSegment segment -> segment.getContext();
+			default -> throw new IllegalArgumentException("Unsupported flow segment " + fs.eClass().getName());
+			};
+			ComponentInstance sci = ci.findSubcomponentInstance(sc);
+			if (sci != null) {
+				processSubcomponentFlow(sci, etei, flowSpecification, iter);
+			} else {
+				reportOwnerError(candidate,
+						"Incomplete End-to-end flow instance " + etei.getName()
+								+ ": Could not find component instance for subcomponent " + sc.getName()
+								+ " in flow implementation " + errorElement.getName());
 			}
+		} else if (fe instanceof Subcomponent subcomponent) {
+			ComponentInstance sci = ci.findSubcomponentInstance(subcomponent);
+			processFlowStep(sci, etei, fe, iter);
+		} else if (fe instanceof DataAccess dataAccess) {
+			processAccess(ci, etei, dataAccess, iter);
+		} else if (fe instanceof SubprogramAccess subprogramAccess) {
+			processAccess(ci, etei, subprogramAccess, iter);
+		} else if (fe instanceof EndToEndFlow endToEndFlow) {
+			processEndToEndFlow(ci, etei, endToEndFlow, iter);
 		}
 	}
 
 	/**
-	 * Instantiate a flow specification by recursively following its
-	 * implementation until a leaf element is reached In case of a leaf element
-	 * add it as a flow step
+	 * Instantiate a component flow specification. Each matching flow implementation creates an alternative path and is
+	 * followed recursively. If no implementation exists, the flow specification itself is added as a leaf step.
 	 *
 	 * @param ci the component whose flow specification is to be processed
 	 * @param etei the end to end flow instance
 	 * @param fs the flow specification to be processed
+	 * @param iter the continuation in the enclosing flow declaration
 	 */
 	protected void processSubcomponentFlow(final ComponentInstance ci, EndToEndFlowInstance etei,
 			final FlowSpecification fs, FlowIterator iter) {
+		FlowCandidate candidate = getCandidate(etei);
 		final ComponentImplementation subImpl = InstanceUtil.getComponentImplementation(ci, 0, classifierCache);
-		final EList<FlowImplementation> flowImpls = new BasicEList<FlowImplementation>(10);
+		final EList<FlowImplementation> flowImpls = new BasicEList<>(10);
 
 		// Collect flow impls for this flow spec
 		if (subImpl != null) {
@@ -413,52 +702,41 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 
 		if (flowImpls.isEmpty()) {
 			// we are at a leaf
-			int errorsBefore = getErrorManager().getNumErrors();
+			int errorsBefore = activeContext.diagnostics.size();
 			processFlowStep(ci, etei, fs, iter);
 			if (subImpl != null && AadlUtil.hasPortComponents(subImpl)
-					&& getErrorManager().getNumErrors() == errorsBefore) {
-				error(etei.getContainingComponentInstance(), "Cannot create end to end flow '" + etei.getName()
+					&& activeContext.diagnostics.size() == errorsBefore) {
+				reportOwnerError(candidate, "Cannot create end to end flow '" + etei.getName()
 						+ "' because component '" + ci.getName()
 						+ "' has subcomponents but no flow implementation for flow '" + fs.getName() + "'");
 			}
 		} else {
 			Iterator<FlowImplementation> itt = flowImpls.iterator();
 
-			state.push(iter);
+			getState(etei).continuations.push(iter);
 			while (itt.hasNext()) {
-				EndToEndFlowInstance eteiClone = null;
-				Stack<FlowIterator> stateClone = null;
+				TraversalState stateClone = null;
 				FlowIterator iterClone = null;
-				List<Connection> connectionsClone = new ArrayList<Connection>();
 				FlowImplementation flowImpl = itt.next();
 				boolean prepareNext = itt.hasNext();
 
 				if (prepareNext) {
-					stateClone = clone(state);
-					eteiClone = EcoreUtil.copy(etei);
-					iterClone = iter.clone();
-					connectionsClone = new ArrayList<Connection>(connections);
-					eteiClone.getModesList().addAll(etei.getModesList());
+					stateClone = forkState(getState(etei));
+					iterClone = iter.copy();
 				}
 
-				// add all ete instances that continue through flow impl
-
 				/*
-				 * Special case for Issue 1953: If flowImpl is a flow in a Thread, and has a non-trivial implementation
-				 * (i.e, it doesn't just pass through), then we ignore the flow implementation details and just use the
-				 * flow specification. Specifically, we are trying NOT to ignore the case where the flow specification
-				 * uses a feature group and the flow implementation refines the feature group to a specific feature
-				 * of that feature group. THese cases are necessary to reduce the combinatorics of the instance model.
+				 * Issue 1953: Treat a thread flow implementation with owned segments as an atomic flow specification
+				 * instead of expanding its internal path, which prevents unnecessary instance-model combinations. An
+				 * empty implementation still follows the normal path because it may refine a feature-group endpoint to
+				 * one of its features.
 				 *
-				 * CAVEAT: Make sure we don't discard the mode information from the flow implementation, even if we are
-				 * ignoring the flow segments.
+				 * The flow implementation still contributes mode constraints even though its segments are ignored.
 				 */
-				if (subImpl instanceof ThreadClassifier && flowImpl.getOwnedFlowSegments().size() != 0) {
-					// Do use the modes from the flow implementation
+				if (subImpl instanceof ThreadClassifier && !flowImpl.getOwnedFlowSegments().isEmpty()) {
 					etei.getModesList().add(getModeInstances(ci, flowImpl));
-					state.pop();
+					getState(etei).continuations.pop();
 
-					// Revert to using the flow specification
 					processFlowStep(ci, etei, fs, iter);
 				} else {
 					if (!processFlowImpl(ci, etei, flowImpl)) {
@@ -467,18 +745,9 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 				}
 
 				if (prepareNext) {
-					// add clone
-					etei.getContainingComponentInstance().getEndToEndFlows().add(eteiClone);
-					etei = eteiClone;
-					state = stateClone;
+					activeState = stateClone;
+					etei = stateClone.candidate.instance;
 					iter = iterClone;
-					addETEI.add(etei);
-					if (etei.getFlowElements() == null || etei.getFlowElements().isEmpty()) {
-						created.add(myInfo = new ETEInfo(etei));
-					} else {
-						created.add(myInfo = new ETEInfo(myInfo.preConns, etei));
-					}
-					connections = connectionsClone;
 				}
 			}
 		}
@@ -491,14 +760,14 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	 *            processed
 	 * @param etei the end to end flow instance
 	 * @param flowImpl the flow implementation to be processed
-	 * @return if elements were added to the end to end flow instance
+	 * @return whether traversal entered the flow implementation; false if it has fewer than two segments
 	 */
 	protected boolean processFlowImpl(ComponentInstance ci, EndToEndFlowInstance etei, FlowImplementation flowImpl) {
 		etei.getModesList().add(getModeInstances(ci, flowImpl));
 
 		if (flowImpl.getOwnedFlowSegments().size() < 2) {
 			// the flow impl doesn't include a subcomponent, nothing to do
-			state.pop();
+			getState(etei).continuations.pop();
 			return false;
 		}
 
@@ -507,10 +776,9 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 * Add all ETE instances that continue through a given leaf flow element.
-	 * One instance per matching connection.
+	 * Continue through a leaf flow element, forking the candidate once for each matching connection instance.
 	 *
-	 * @param ci
+	 * @param ci the component instance containing the leaf
 	 * @param etei the current end to end flow instance
 	 * @param leaf the next ETE element
 	 * @param iter the position in the current end to end flow declaration
@@ -519,30 +787,35 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 		processFlowStep(ci, etei, leaf, null, iter);
 	}
 
+	/**
+	 * Continue through a leaf flow element and constrain the incoming connection to the start of the next flow
+	 * implementation when one is known.
+	 */
 	protected void processFlowStep(ComponentInstance ci, EndToEndFlowInstance etei, Element leaf,
 			FlowImplementation nextFlowImpl, FlowIterator iter) {
+		TraversalState traversal = getState(etei);
+		FlowCandidate candidate = traversal.candidate;
 		// add connection(s), will be empty when starting the ETE
-		if (connections.isEmpty()) {
+		if (traversal.connections.isEmpty()) {
 			if (!addLeafElement(ci, etei, leaf)) {
-				removeETEI.add(etei);
-				abortedETEI.add(etei);
+				abortCandidate(candidate);
 				return;
 			}
-			lastFlowImpl.push(nextFlowImpl);
+			traversal.flowImplementations.add(nextFlowImpl);
 			continueFlow(ci.getContainingComponentInstance(), etei, iter, ci);
-			lastFlowImpl.pop();
+			traversal.flowImplementations.removeLast();
 		} else {
-			List<ConnectionInstance> connis = collectConnectionInstances(ci, etei);
+			List<ConnectionInstance> connis = collectConnectionInstances(ci, etei, traversal.connections);
 
 			if (connis.isEmpty()) {
-				connections.clear();
-				removeETEI.add(etei);
+				traversal.connections.clear();
+				failCandidate(candidate);
 
-				if (!lastFlowImpl.isEmpty()) {
-					FlowImplementation flowFilter = lastFlowImpl.peek();
+				if (!traversal.flowImplementations.isEmpty()) {
+					FlowImplementation flowFilter = traversal.flowImplementations.getLast();
 					if (flowFilter != null) {
-						/* [**] See note below. */
-						error(etei.getContainingComponentInstance(),
+						// A semantic connection was expected after the preceding flow implementation.
+						reportOwnerError(candidate,
 								"Cannot create end to end flow '" + etei.getName()
 										+ "' because there are no semantic connections that continue the flow '"
 										+ flowFilter.getSpecification().getName() + "' from feature '"
@@ -550,112 +823,85 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 					}
 				}
 			} else {
-				FlowImplementation flowFilter = lastFlowImpl.isEmpty() ? null : lastFlowImpl.peek();
+				FlowImplementation flowFilter = traversal.flowImplementations.isEmpty()
+						? null
+						: traversal.flowImplementations.getLast();
 
 				/*
-				 * Issue 1984: isValidContinuation() should be used purely as a filter, and not as an error
-				 * reporter. We need to make a first pass through the connection instances and determine which
-				 * ones are applicable to the current flow. Only if NONE of them are, do we report an error.
-				 * Otherwise, we use the subset of applicable connection instances and continue on normally.
+				 * Issue 1984: isValidContinuation() is a filter, not an error reporter. Determine the applicable
+				 * connections first and report an error only when none of the candidates can continue this flow.
 				 */
 				final List<ConnectionInstance> connectionsToUse = new ArrayList<>();
 				for (final ConnectionInstance ciToCheck : connis) {
-					if ((flowFilter == null || isValidContinuation(etei, flowFilter, ciToCheck))
+					if ((flowFilter == null || isValidContinuation(flowFilter, ciToCheck))
 							&& (nextFlowImpl == null
-									? (leaf instanceof FlowSpecification
-											? isValidContinuation(ci, ciToCheck, (FlowSpecification) leaf)
+									? (leaf instanceof FlowSpecification flowSpecification
+											? isValidContinuation(ci, ciToCheck, flowSpecification)
 											: true)
-									: isValidContinuation(etei, ciToCheck, nextFlowImpl))) {
+									: isValidContinuation(ciToCheck, nextFlowImpl))) {
 						connectionsToUse.add(ciToCheck);
 					}
 				}
 
 				if (connectionsToUse.isEmpty()) {
 					/*
-					 * I originally thought that this case couldn't happen, but I've been proven wrong. This happens when the
-					 * connections inside a component implementation completely bypass the flow implementation. That is, the
-					 * flow implies one path, but the actual connections in the implementation make a different one.
-					 *
-					 * This error is the opposite of the case above [**].
+					 * Connections may bypass the start of the selected flow implementation: the declarative flow and the
+					 * actual component connections then describe different paths.
 					 */
 					if (flowFilter == null && nextFlowImpl == null) {
 						final FlowSpecification flowSpec = (FlowSpecification) leaf;
-						error(etei.getContainingComponentInstance(), "Cannot create end to end flow '" + etei.getName()
+						reportOwnerError(candidate, "Cannot create end to end flow '" + etei.getName()
 								+ "' because there are no semantic connections that connect to the start of the flow '"
 								+ flowSpec.getName() + "' at feature '" + flowSpec.getAllInEnd().getFeature().getName()
 								+ "'");
 					} else {
 						final FlowImplementation ff = flowFilter == null ? nextFlowImpl : flowFilter;
-						error(etei.getContainingComponentInstance(), "Cannot create end to end flow '" + etei.getName()
+						reportOwnerError(candidate, "Cannot create end to end flow '" + etei.getName()
 								+ "' because there are no semantic connections that connect to the start of the flow '"
 								+ ff.getSpecification().getName() + "' at feature '"
 								+ ff.getInEnd().getFeature().getName() + "'");
 					}
-					connections.clear();
-					removeETEI.add(etei);
+					traversal.connections.clear();
+					failCandidate(candidate);
 				} else {
 					// continue the flow along each eligible connection instance
 					Iterator<ConnectionInstance> connIter = connectionsToUse.iterator();
 					while (connIter.hasNext()) {
 						final ConnectionInstance conni = connIter.next();
 						final boolean prepareNext = connIter.hasNext();
-						EndToEndFlowInstance eteiClone = null;
-						Stack<FlowIterator> stateClone = null;
+						TraversalState branchState = getState(etei);
+						TraversalState stateClone = null;
 						FlowIterator iterClone = null;
 
-						lastFlowImpl.push(nextFlowImpl);
-
 						if (prepareNext) {
-							stateClone = clone(state);
-							eteiClone = EcoreUtil.copy(etei);
-							iterClone = iter.clone();
-							eteiClone.getModesList().addAll(etei.getModesList());
+							stateClone = forkState(branchState);
+							iterClone = iter.copy();
 						}
 
+						branchState.flowImplementations.add(nextFlowImpl);
 						etei.getFlowElements().add(conni);
 						if (addLeafElement(ci, etei, leaf)) {
 							// prepare next connection filter
-							connections.clear();
+							branchState.connections.clear();
 							if (iter.hasNext()) {
-								Element obj = iter.next();
-								Connection conn = null;
-								if (obj instanceof FlowSegment) {
-									FlowElement fe = ((FlowSegment) obj).getFlowElement();
-									if (fe instanceof Connection) {
-										conn = (Connection) fe;
-									}
-								} else if (obj instanceof EndToEndFlowSegment) {
-									EndToEndFlowElement fe = ((EndToEndFlowSegment) obj).getFlowElement();
-									if (fe instanceof Connection) {
-										conn = (Connection) fe;
-									}
-								}
+								Connection conn = getConnection(iter.next());
 								if (conn != null) {
-									connections.add(conn);
+									branchState.connections.add(conn);
 								}
 							}
 
 							continueFlow(ci.getContainingComponentInstance(), etei, iter, ci);
 						} else {
-							connections.clear();
-							removeETEI.add(etei);
-							abortedETEI.add(etei);
+							branchState.connections.clear();
+							abortCandidate(getCandidate(etei));
 						}
 
-						lastFlowImpl.pop();
+						branchState.flowImplementations.removeLast();
 
 						if (prepareNext) {
-							// add clone
-							etei.getContainingComponentInstance().getEndToEndFlows().add(eteiClone);
-							etei = eteiClone;
-							state = stateClone;
+							activeState = stateClone;
+							etei = stateClone.candidate.instance;
 							iter = iterClone;
-							addETEI.add(etei);
-							if (etei.getFlowElements() == null || etei.getFlowElements().isEmpty()) {
-								created.add(myInfo = new ETEInfo(etei));
-							} else {
-								created.add(myInfo = new ETEInfo(myInfo.preConns, etei));
-							}
 						}
 					}
 				}
@@ -664,34 +910,31 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 * Check if a connection destination is the start of a flow implementation
-	 * @param conn
-	 * @param flow
-	 * @return
+	 * Check whether a connection instance ends at the input feature of a flow implementation.
+	 *
+	 * @param conni the connection instance
+	 * @param fimpl the flow implementation that must follow the connection
+	 * @return whether the connection destination is the flow input
 	 */
-	boolean isValidContinuation(EndToEndFlowInstance etei, ConnectionInstance conni, FlowImplementation fimpl) {
+	boolean isValidContinuation(ConnectionInstance conni, FlowImplementation fimpl) {
 		boolean result = false;
 		ConnectionInstanceEnd dst = conni.getDestination();
-		if (dst instanceof FeatureInstance) {
+		if (dst instanceof FeatureInstance featureInstance) {
 			Feature flowIn = fimpl.getInEnd().getFeature();
-			Feature connDst = ((FeatureInstance) dst).getFeature();
+			Feature connDst = featureInstance.getFeature();
 			result = flowIn == connDst;
 		}
 		return result;
 	}
 
 	/**
-	 * Check if connection ends at flow specification.
+	 * Check whether a connection instance ends at a flow specification's source feature. A connection to the source
+	 * feature itself or to a feature nested within it is accepted by walking up the feature-instance containment chain.
 	 *
-	 * There are three cases
-	 * - same feature instance
-	 * - connection end is a feature instance contained in the flow spec src feature instance
-	 * - connection end is a feature in an array and the flow spec src is the array without index
-	 *
-	 * @param flowComponent
-	 * @param conni
-	 * @param fspec
-	 * @return
+	 * @param flowComponent the component that owns the flow specification instance
+	 * @param conni the connection instance
+	 * @param fspec the flow specification that must follow the connection
+	 * @return whether the connection destination reaches the flow source
 	 */
 	boolean isValidContinuation(ComponentInstance flowComponent, ConnectionInstance conni, FlowSpecification fspec) {
 		ConnectionInstanceEnd cie = conni.getDestination();
@@ -712,132 +955,113 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 * Check if a connection source is the end of a flow implementation
-	 * @param conn
-	 * @param flow
-	 * @return
+	 * Check whether a connection instance starts at the output feature of a flow implementation.
+	 *
+	 * @param fimpl the flow implementation that must precede the connection
+	 * @param conni the connection instance
+	 * @return whether the connection source is the flow output
 	 */
-	boolean isValidContinuation(EndToEndFlowInstance etei, FlowImplementation fimpl, ConnectionInstance conni) {
+	boolean isValidContinuation(FlowImplementation fimpl, ConnectionInstance conni) {
 		boolean result = false;
 		ConnectionInstanceEnd src = conni.getSource();
-		if (src instanceof FeatureInstance) {
+		if (src instanceof FeatureInstance featureInstance) {
 			Feature flowOut = fimpl.getOutEnd().getFeature();
-			Feature connSrc = ((FeatureInstance) src).getFeature();
+			Feature connSrc = featureInstance.getFeature();
 			result = flowOut == connSrc;
 		}
 		return result;
 	}
 
 	/**
-	 * Add the ETE instance that goes through a data access feature. Instead of
-	 * the data access feature, add the accessed object to the ETE instance. The
-	 * access feature uniquely determines the accessed object.
+	 * Continue through a data or subprogram access. The accessed component instance, rather than the access feature, is
+	 * added as the flow element. Multiple matching access connections create independent candidates.
 	 *
-	 * @param ci
-	 * @param etei
-	 * @param fe
-	 * @param iter
+	 * @param ci the component containing the access
+	 * @param etei the current end-to-end flow candidate
+	 * @param a the data or subprogram access
+	 * @param iter the continuation in the enclosing flow declaration
 	 */
 	private void processAccess(ComponentInstance ci, EndToEndFlowInstance etei, Access a, FlowIterator iter) {
+		TraversalState traversal = getState(etei);
+		FlowCandidate candidate = traversal.candidate;
 		// add connection(s), will be empty when starting the ETE
-		if (connections.isEmpty()) {
+		if (traversal.connections.isEmpty()) {
 			addLeafElement(ci, etei, a);
 			continueFlow(ci.getContainingComponentInstance(), etei, iter, ci);
 		} else {
-			List<ConnectionInstance> connis = collectConnectionInstances(ci, etei);
+			List<ConnectionInstance> connis = collectConnectionInstances(ci, etei, traversal.connections);
 
 			if (connis.isEmpty()) {
-				error(etei, "Incomplete end-to-end flow instance " + etei.getName()
-						+ ": Missing connection instance to " + ((NamedElement) a).getName());
-				connections.clear();
+				reportCandidateError(candidate, "Incomplete end-to-end flow instance " + etei.getName()
+						+ ": Missing connection instance to " + a.getName());
+				traversal.connections.clear();
 			} else {
-				Iterator<ConnectionInstance> connIter = connis.iterator();
-				boolean errorReported = false;
-
-				state.push(iter);
-				while (connIter.hasNext()) {
-					EndToEndFlowInstance eteiClone = null;
-					Stack<FlowIterator> stateClone = null;
-					List<Connection> connectionsClone = new ArrayList<Connection>();
-					ConnectionInstance conni = connIter.next();
-					boolean prepareNext = connIter.hasNext();
-					EndToEndFlowElement leaf = null;
-					ComponentInstance target = null;
-
-					if (conni.getDestination() instanceof ComponentInstance) {
-						target = (ComponentInstance) conni.getDestination();
-
-						if (target.getCategory() == ComponentCategory.DATA
-								|| target.getCategory() == ComponentCategory.SUBPROGRAM) {
-							leaf = target.getSubcomponent();
-						}
+				record AccessMatch(ConnectionInstance connection, ComponentInstance target,
+						EndToEndFlowElement leaf) {
+				}
+				List<AccessMatch> matches = new ArrayList<>();
+				boolean invalidTarget = false;
+				for (ConnectionInstance conni : connis) {
+					if (conni.getDestination() instanceof ComponentInstance target
+							&& (target.getCategory() == ComponentCategory.DATA
+									|| target.getCategory() == ComponentCategory.SUBPROGRAM)) {
+						matches.add(new AccessMatch(conni, target, target.getSubcomponent()));
 					} else {
-						if (!errorReported) {
-							errorReported = true;
-							error(etei, "Access feature " + a.getQualifiedName()
-									+ " is not a proxy for a data or subprogram component.");
+						invalidTarget = true;
+					}
+				}
+
+				if (invalidTarget) {
+					reportCandidateError(candidate, "Access feature " + a.getQualifiedName()
+							+ " is not a proxy for a data or subprogram component.");
+				}
+				if (matches.isEmpty()) {
+					traversal.connections.clear();
+					failCandidate(candidate);
+					return;
+				}
+
+				Iterator<AccessMatch> matchIter = matches.iterator();
+				traversal.continuations.push(iter);
+				while (matchIter.hasNext()) {
+					TraversalState branchState = getState(etei);
+					TraversalState stateClone = null;
+					AccessMatch match = matchIter.next();
+					boolean prepareNext = matchIter.hasNext();
+
+					if (prepareNext) {
+						stateClone = forkState(branchState);
+						etei.setName(etei.getEndToEndFlow().getName());
+					}
+					FlowIterator continuation = branchState.continuations.pop();
+
+					etei.getFlowElements().add(match.connection());
+					addLeafElement(match.target(), etei, match.leaf());
+
+					// prepare next connection filter
+					Connection lastConn = branchState.connections.getLast();
+					branchState.connections.clear();
+					if (continuation.hasNext()) {
+						Connection nextConn = getConnection(continuation.next());
+						if (nextConn != null) {
+							int i = match.connection().getConnectionReferences().size() - 1;
+							Connection preConn = null;
+
+							while (i > 0 && preConn != lastConn) {
+								preConn = match.connection().getConnectionReferences().get(i--).getConnection();
+								if (preConn != lastConn) {
+									branchState.connections.add(preConn);
+								}
+							}
+							branchState.connections.add(nextConn);
 						}
 					}
 
-					if (leaf != null) {
-						if (prepareNext) {
-							stateClone = clone(state);
-							eteiClone = EcoreUtil.copy(etei);
-							connectionsClone = new ArrayList<Connection>(connections);
-							etei.setName(etei.getEndToEndFlow().getName());
-							eteiClone.getModesList().addAll(etei.getModesList());
-						}
+					continueFlow(ci, etei, continuation, ci);
 
-						etei.getFlowElements().add(conni);
-						addLeafElement(target, etei, leaf);
-
-						// prepare next connection filter
-						Connection lastConn = connections.get(connections.size() - 1);
-
-						connections.clear();
-						if (iter.hasNext()) {
-							Element obj = iter.next();
-							Connection nextConn = null;
-							if (obj instanceof FlowSegment fs) {
-								FlowElement fe = fs.getFlowElement();
-								if (fe instanceof Connection c) {
-									nextConn = c;
-								}
-							} else if (obj instanceof EndToEndFlowSegment eefs) {
-								EndToEndFlowElement fe = eefs.getFlowElement();
-								if (fe instanceof Connection c) {
-									nextConn = c;
-								}
-							}
-							if (nextConn != null) {
-								int i = conni.getConnectionReferences().size() - 1;
-								Connection preConn = null;
-
-								while (i > 0 && preConn != lastConn) {
-									preConn = conni.getConnectionReferences().get(i--).getConnection();
-									if (preConn != lastConn) {
-										connections.add(preConn);
-									}
-								}
-								connections.add(nextConn);
-							}
-						}
-
-						continueFlow(ci, etei, state.pop(), ci);
-
-						if (prepareNext) {
-							// add clone
-							etei.getContainingComponentInstance().getEndToEndFlows().add(eteiClone);
-							etei = eteiClone;
-							state = stateClone;
-							connections = connectionsClone;
-							addETEI.add(etei);
-							if (etei.getFlowElements() == null || etei.getFlowElements().isEmpty()) {
-								created.add(myInfo = new ETEInfo(etei));
-							} else {
-								created.add(myInfo = new ETEInfo(myInfo.preConns, etei));
-							}
-						}
+					if (prepareNext) {
+						activeState = stateClone;
+						etei = stateClone.candidate.instance;
 					}
 				}
 			}
@@ -845,167 +1069,174 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 *
-	 * @param ci
-	 * @param etei
-	 * @param ete
-	 * @param iter
+	 * Continue through a nested end-to-end flow. The nested declaration is expanded once per component context, and the
+	 * parent candidate is forked for every nested candidate whose leading connection path is compatible.
 	 */
-	// add preConn before addNested
 	private void processEndToEndFlow(ComponentInstance ci, EndToEndFlowInstance etei, EndToEndFlow ete,
 			FlowIterator iter) {
-		List<ETEInfo> nestedETEs;
+		TraversalState traversal = getState(etei);
+		FlowCandidate candidate = traversal.candidate;
 
-		int cycleStart = activeEndToEndFlows.indexOf(ete);
+		int cycleStart = activeContext.activeDeclarations.indexOf(ete);
 		if (cycleStart >= 0) {
-			failedEndToEndFlows.addAll(activeEndToEndFlows.subList(cycleStart, activeEndToEndFlows.size()));
-			error(etei, "Cyclic dependency between end to end flows involving " + ete.getQualifiedName());
-			connections.clear();
+			for (int i = cycleStart; i < activeContext.activeDeclarations.size(); i++) {
+				FlowExpansion failedExpansion = activeContext.expansions.get(activeContext.activeDeclarations.get(i));
+				failedExpansion.status = ExpansionStatus.FAILED;
+				for (FlowCandidate failedCandidate : failedExpansion.candidates) {
+					failedCandidate.status = CandidateStatus.FAILED;
+				}
+			}
+			reportCandidateError(candidate,
+					"Cyclic dependency between end to end flows involving " + ete.getQualifiedName());
+			traversal.connections.clear();
 			return;
 		}
 
 		// instantiate the nested ete if that hasn't been done already
-		if (!ete2info.containsKey(ete)) {
-			new CreateEndToEndFlowsSwitch(monitor, getErrorManager(), classifierCache, activeEndToEndFlows,
-					failedEndToEndFlows).instantiateAndCleanUpEndToEndFlow(ci, ete, ete2info);
+		if (!activeContext.expansions.containsKey(ete)) {
+			instantiateEndToEndFlow(ci, ete, null);
 		}
-		if (failedEndToEndFlows.contains(ete)) {
-			failedEndToEndFlows.add(etei.getEndToEndFlow());
-			connections.clear();
+		FlowExpansion nestedExpansion = activeContext.expansions.get(ete);
+		if (nestedExpansion.status == ExpansionStatus.FAILED) {
+			candidate.expansion.status = ExpansionStatus.FAILED;
+			for (FlowCandidate failedCandidate : candidate.expansion.candidates) {
+				failedCandidate.status = CandidateStatus.FAILED;
+			}
+			traversal.connections.clear();
 			return;
 		}
-		nestedETEs = ete2info.get(ete);
+		List<FlowCandidate> nestedETEs = nestedExpansion.candidates.stream()
+				.filter(nested -> nested.status == CandidateStatus.COMPLETE)
+				.toList();
 
 		if (nestedETEs.isEmpty()) {
-			error(etei, "No nested end to end flows instantiated for " + ete.getQualifiedName());
-			connections.clear();
+			reportCandidateError(candidate, "No nested end to end flows instantiated for " + ete.getQualifiedName());
+			traversal.connections.clear();
 			return;
 		}
 		// add connection(s), will be empty when starting the ETE
-		if (connections.isEmpty()) {
-			EndToEndFlowInstance eteiClone = null;
-			Stack<FlowIterator> stateClone = null;
-			Iterator<ETEInfo> nestedIter = nestedETEs.iterator();
+		if (traversal.connections.isEmpty()) {
+			TraversalState stateClone = null;
+			Iterator<FlowCandidate> nestedIter = nestedETEs.iterator();
 
-			state.push(iter);
+			traversal.continuations.push(iter);
 			while (nestedIter.hasNext()) {
-				ETEInfo nested = nestedIter.next();
+				FlowCandidate nested = nestedIter.next();
 				boolean prepareNext = nestedIter.hasNext();
 
 				if (prepareNext) {
-					stateClone = clone(state);
-					eteiClone = EcoreUtil.copy(etei);
+					stateClone = forkState(getState(etei));
 					etei.setName(etei.getEndToEndFlow().getName());
-					eteiClone.getModesList().addAll(etei.getModesList());
 				}
-				FlowIterator continuation = state.pop();
+				TraversalState branchState = getState(etei);
+				FlowIterator continuation = branchState.continuations.pop();
 
-				addNestedETE(etei, nested);
+				etei.getFlowElements().add(nested.instance);
 
 				// prepare next connection filter
-				connections.clear();
-				connections.addAll(nested.postConns);
+				branchState.connections.clear();
+				branchState.connections.addAll(nested.postConnections);
 				if (continuation.hasNext()) {
 					Connection conn = getConnection(continuation.next());
 					if (conn != null) {
-						connections.add(conn);
+						branchState.connections.add(conn);
 					}
 				}
 
 				continueFlow(ci, etei, continuation, ci);
 
 				if (prepareNext) {
-					// add clone
-					etei.getContainingComponentInstance().getEndToEndFlows().add(eteiClone);
-					etei = eteiClone;
-					state = stateClone;
-					addETEI.add(etei);
-					if (etei.getFlowElements() == null || etei.getFlowElements().isEmpty()) {
-						created.add(myInfo = new ETEInfo(etei));
-					} else {
-						created.add(myInfo = new ETEInfo(myInfo.preConns, etei));
-					}
+					activeState = stateClone;
+					etei = stateClone.candidate.instance;
 				}
 			}
 		} else {
-			List<ConnectionInstance> connis = collectConnectionInstances(ci, etei);
+			List<ConnectionInstance> connis = collectConnectionInstances(ci, etei, traversal.connections);
 
 			if (connis.isEmpty()) {
-				error(etei, "Incomplete end-to-end flow instance " + etei.getName()
-						+ ": Missing connection instance to " + ((NamedElement) ete).getName());
-				connections.clear();
+				reportCandidateError(candidate, "Incomplete end-to-end flow instance " + etei.getName()
+						+ ": Missing connection instance to " + ete.getName());
+				traversal.connections.clear();
 			} else {
-				int compatibleCount = 0;
+				record NestedMatch(ConnectionInstance connection, FlowCandidate nested) {
+				}
+				List<NestedMatch> matches = new ArrayList<>();
 				for (ConnectionInstance conni : connis) {
-					for (ETEInfo nested : nestedETEs) {
-						if (containsConnectionPath(conni, nested.preConns)) {
-							compatibleCount++;
+					for (FlowCandidate nested : nestedETEs) {
+						if (isCompatibleNestedConnection(conni, nested)) {
+							matches.add(new NestedMatch(conni, nested));
 						}
 					}
 				}
-				if (compatibleCount == 0) {
-					error(etei, "Incomplete end-to-end flow instance " + etei.getName()
+				if (matches.isEmpty()) {
+					reportCandidateError(candidate, "Incomplete end-to-end flow instance " + etei.getName()
 							+ ": No compatible nested end to end flow instance for " + ete.getName());
-					connections.clear();
+					traversal.connections.clear();
 					return;
 				}
 
-				Iterator<ConnectionInstance> connIter = connis.iterator();
-				state.push(iter);
-				while (connIter.hasNext()) {
-					EndToEndFlowInstance eteiClone = null;
-					Stack<FlowIterator> stateClone = null;
-					ConnectionInstance conni = connIter.next();
-					Iterator<ETEInfo> nestedIter = nestedETEs.iterator();
+				Iterator<NestedMatch> matchIter = matches.iterator();
+				traversal.continuations.push(iter);
+				while (matchIter.hasNext()) {
+					TraversalState stateClone = null;
+					NestedMatch match = matchIter.next();
+					boolean prepareNext = matchIter.hasNext();
 
-					while (nestedIter.hasNext()) {
-						ETEInfo nested = nestedIter.next();
-						if (!containsConnectionPath(conni, nested.preConns)) {
-							continue;
+					if (prepareNext) {
+						stateClone = forkState(getState(etei));
+						etei.setName(etei.getEndToEndFlow().getName());
+					}
+					TraversalState branchState = getState(etei);
+					FlowIterator continuation = branchState.continuations.pop();
+
+					// Preserve path order: the incoming connection precedes the nested flow.
+					etei.getFlowElements().add(match.connection());
+					etei.getFlowElements().add(match.nested().instance);
+
+					// prepare next connection filter
+					branchState.connections.clear();
+					branchState.connections.addAll(match.nested().postConnections);
+					if (continuation.hasNext()) {
+						Connection nextConnection = getConnection(continuation.next());
+						if (nextConnection != null) {
+							branchState.connections.add(nextConnection);
 						}
-						boolean prepareNext = --compatibleCount > 0;
+					}
 
-						if (prepareNext) {
-							stateClone = clone(state);
-							eteiClone = EcoreUtil.copy(etei);
-							etei.setName(etei.getEndToEndFlow().getName());
-							eteiClone.getModesList().addAll(etei.getModesList());
-						}
-						FlowIterator continuation = state.pop();
+					continueFlow(ci, etei, continuation, ci);
 
-						etei.getFlowElements().add(conni);
-						addNestedETE(etei, nested);
-
-						// prepare next connection filter
-						connections.clear();
-						connections.addAll(nested.postConns);
-						if (continuation.hasNext()) {
-							Connection nextConnection = getConnection(continuation.next());
-							if (nextConnection != null) {
-								connections.add(nextConnection);
-							}
-						}
-
-						continueFlow(ci, etei, continuation, ci);
-
-						if (prepareNext) {
-							// add clone
-							etei.getContainingComponentInstance().getEndToEndFlows().add(eteiClone);
-							etei = eteiClone;
-							state = stateClone;
-							addETEI.add(etei);
-							if (etei.getFlowElements() == null || etei.getFlowElements().isEmpty()) {
-								created.add(myInfo = new ETEInfo(etei));
-							} else {
-								created.add(myInfo = new ETEInfo(myInfo.preConns, etei));
-							}
-						}
+					if (prepareNext) {
+						activeState = stateClone;
+						etei = stateClone.candidate.instance;
 					}
 				}
 			}
 		}
 	}
 
+	/**
+	 * Check whether an incoming connection reaches the start of a nested end-to-end flow candidate.
+	 */
+	private boolean isCompatibleNestedConnection(ConnectionInstance connection, FlowCandidate nested) {
+		if (!containsConnectionPath(connection, nested.preConnections)) {
+			return false;
+		}
+
+		ConnectionInstanceEnd destination = connection.getDestination();
+		ConnectionInstanceEnd nestedStart = getFirstConnectionEnd(nested.instance);
+		if (destination instanceof FeatureInstance destinationFeature
+				&& nestedStart instanceof FeatureInstance nestedFeature) {
+			return isSameorContains(nestedFeature, destinationFeature);
+		}
+		if (nestedStart instanceof ComponentInstance nestedComponent) {
+			return destination == nestedComponent || destination.getComponentInstance() == nestedComponent;
+		}
+		return destination == nestedStart;
+	}
+
+	/**
+	 * Check whether a connection instance contains a declarative connection path as a contiguous sequence.
+	 */
 	private static boolean containsConnectionPath(ConnectionInstance connectionInstance,
 			List<Connection> connectionPath) {
 		if (connectionPath.isEmpty()) {
@@ -1025,49 +1256,59 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 		return false;
 	}
 
-	private void addNestedETE(EndToEndFlowInstance etei, ETEInfo nested) {
-		etei.getFlowElements().add(nested.etei);
+	private ConnectionInstanceEnd getFirstConnectionEnd(EndToEndFlowInstance etei) {
+		EList<FlowElementInstance> elements = etei.getFlowElements();
+		if (elements.isEmpty()) {
+			return null;
+		}
+
+		return switch (elements.getFirst()) {
+		case EndToEndFlowInstance nested -> getFirstConnectionEnd(nested);
+		case FlowSpecificationInstance flowSpecification -> flowSpecification.getSource();
+		case ConnectionInstance connection -> connection.getSource();
+		case ComponentInstance component -> component;
+		case null, default -> null;
+		};
 	}
 
 	/**
-	 * @param ci
-	 * @param etei
-	 * @param leaf
+	 * Add the concrete instance object represented by a declarative leaf.
+	 *
+	 * @param ci the component instance containing the leaf
+	 * @param etei the candidate receiving the leaf
+	 * @param leaf a flow specification, flow implementation, or subcomponent
 	 * @return whether the leaf was added successfully
 	 */
 	private boolean addLeafElement(ComponentInstance ci, EndToEndFlowInstance etei, Element leaf) {
-		FlowSpecification fs;
-		FlowSpecificationInstance fsi;
-		if (leaf instanceof FlowSpecification || leaf instanceof FlowImplementation) {
+		FlowCandidate candidate = getCandidate(etei);
+		FlowSpecification fs = switch (leaf) {
+		case FlowImplementation flowImplementation -> flowImplementation.getSpecification();
+		case FlowSpecification flowSpecification -> flowSpecification;
+		default -> null;
+		};
+		if (fs != null) {
 			// append a flow specification instance
-			if (leaf instanceof FlowImplementation) {
-				FlowImplementation fi = (FlowImplementation) leaf;
-				fs = fi.getSpecification();
-			} else {
-				fs = (FlowSpecification) leaf;
-			}
-			fsi = ci.findFlowSpecInstance(fs);
+			FlowSpecificationInstance fsi = ci.findFlowSpecInstance(fs);
 			if (fsi != null) {
 				etei.getFlowElements().add(fsi);
-			} else if (fs != null) {
-				error(etei.getContainingComponentInstance(), "Incomplete end-to-end flow instance " + etei.getName()
+			} else {
+				reportOwnerError(candidate, "Incomplete end-to-end flow instance " + etei.getName()
 						+ ": Could not find flow spec " + fs.getName() + " of component " + ci.getName());
 				return false;
 			}
 		} else if (leaf instanceof Subcomponent) {
-			if (etei.getFlowElements().size() == 0) {
+			if (etei.getFlowElements().isEmpty()) {
 				// append a subcomponent instance
 				etei.getFlowElements().add(ci);
 			} else {
-				ConnectionInstance preConn = (ConnectionInstance) etei.getFlowElements()
-						.get(etei.getFlowElements().size() - 1);
+				ConnectionInstance preConn = (ConnectionInstance) etei.getFlowElements().getLast();
 				ConnectionInstanceEnd end = preConn.getDestination();
 				ComponentInstance comp = end.getContainingComponentInstance();
 				if (end instanceof ComponentInstance || comp == ci) {
 					// append a subcomponent instance
 					etei.getFlowElements().add(ci);
 				} else {
-					error(etei.getContainingComponentInstance(),
+					reportOwnerError(candidate,
 							"Invalid end-to-end flow instance " + etei.getName() + ": Connection "
 									+ preConn.getComponentInstancePath() + " continues into component "
 									+ ci.getInstanceObjectPath());
@@ -1078,32 +1319,56 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 		return true;
 	}
 
+	/**
+	 * Resume traversal until the active candidate completes, aborts, switches to another branch, or reaches the system
+	 * boundary. Exhausted nested continuations move traversal back to the containing component.
+	 */
 	private void continueFlow(ComponentInstance ci, EndToEndFlowInstance etei, FlowIterator iter,
 			NamedElement errorElement) {
+		FlowCandidate candidate = getCandidate(etei);
 		while (true) {
+			if (monitor.isCanceled()) {
+				activeContext.canceled = true;
+				return;
+			}
+			if (candidate.status == CandidateStatus.ABORTED || candidate.status == CandidateStatus.FAILED) {
+				return;
+			}
+			if (activeState == null || activeState.candidate != candidate) {
+				return;
+			}
+			TraversalState traversal = activeState;
 			if (ci == null) {
-				error(errorElement, "Flow instance leaves system instance for flow " + etei.getInstanceObjectPath());
-				connections.clear();
+				reportExistingElementError(candidate, errorElement,
+						"Flow instance leaves system instance for flow " + getProspectivePath(candidate));
+				traversal.connections.clear();
 				return;
 			}
 			while (iter.hasNext()) {
 				Element e = iter.next();
 				processETESegment(ci, etei, e, iter, errorElement);
-				if (abortedETEI.contains(etei)) {
+				if (candidate.status == CandidateStatus.ABORTED || candidate.status == CandidateStatus.FAILED
+						|| activeState == null || activeState.candidate != candidate) {
 					return;
 				}
 			}
-			if (state.size() == 0) {
-				if (!completedETEI.contains(etei)) {
-					// a flow is done
-					fillinModes(etei);
-					myInfo.postConns.addAll(connections);
-					connections.clear();
-					completedETEI.add(etei);
+			if (candidate.status == CandidateStatus.COMPLETE) {
+				return;
+			}
+			if (traversal.continuations.isEmpty()) {
+				if (candidate.status == CandidateStatus.ACTIVE) {
+					if (candidate.instance.getFlowElements().isEmpty()) {
+						traversal.connections.clear();
+						failCandidate(candidate);
+					} else {
+						candidate.postConnections.addAll(traversal.connections);
+						traversal.connections.clear();
+						candidate.status = CandidateStatus.COMPLETE;
+					}
 				}
 				break;
 			}
-			iter = state.pop();
+			iter = traversal.continuations.pop();
 			ci = ci.getContainingComponentInstance();
 		}
 	}
@@ -1123,14 +1388,15 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 * Get all connection instances that pass through the sequence of
-	 * declarative connections.
+	 * Get all enclosing connection instances that pass through the given declarative connection sequence and continue
+	 * from the candidate's current endpoint.
 	 */
-	private List<ConnectionInstance> collectConnectionInstances(ComponentInstance ci, EndToEndFlowInstance etei) {
-		List<ConnectionInstance> result = new ArrayList<ConnectionInstance>();
+	private List<ConnectionInstance> collectConnectionInstances(ComponentInstance ci, EndToEndFlowInstance etei,
+			List<Connection> connections) {
+		List<ConnectionInstance> result = new ArrayList<>();
 
 		for (ConnectionInstance conni : ci.allEnclosingConnectionInstances()) {
-			if (testConnection(conni, etei)) {
+			if (testConnection(conni, etei, connections)) {
 				result.add(conni);
 			}
 		}
@@ -1138,11 +1404,17 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	}
 
 	/**
-	 * @param conni
-	 * @param etei
-	 * @param result
+	 * Match a connection instance against a contiguous sequence of declarative connections. Refined connections are
+	 * considered equivalent; single-connection paths are also checked for flow direction; feature-group expansion is
+	 * checked against the candidate's last feature.
+	 *
+	 * @param conni the connection instance to test
+	 * @param etei the candidate whose current endpoint constrains the match
+	 * @param connections the declarative connection sequence
+	 * @return whether the connection instance continues the candidate along the requested sequence
 	 */
-	private boolean testConnection(ConnectionInstance conni, EndToEndFlowInstance etei) {
+	private boolean testConnection(ConnectionInstance conni, EndToEndFlowInstance etei,
+			List<Connection> connections) {
 		Iterator<ConnectionReference> refIter = conni.getConnectionReferences().iterator();
 		boolean match = false;
 
@@ -1165,12 +1437,11 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 			ComponentInstance connci = conni.getSource().getComponentInstance();
 			FlowElementInstance fei = etei;
 
-			while (fei instanceof EndToEndFlowInstance) {
-				fei = ((EndToEndFlowInstance) fei).getFlowElements()
-						.get(((EndToEndFlowInstance) fei).getFlowElements().size() - 1);
+			while (fei instanceof EndToEndFlowInstance nested) {
+				fei = nested.getFlowElements().getLast();
 			}
-			if (fei instanceof FlowSpecificationInstance) {
-				fei = fei.getComponentInstance();
+			if (fei instanceof FlowSpecificationInstance flowSpecification) {
+				fei = flowSpecification.getComponentInstance();
 			}
 			ComponentInstance flowci = (ComponentInstance) fei;
 
@@ -1190,8 +1461,7 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 			// instance comes from an expanded fg connection
 			ConnectionInstanceEnd src = conni.getSource();
 
-			if (src instanceof FeatureInstance) {
-				FeatureInstance firstFeature = (FeatureInstance) src;
+			if (src instanceof FeatureInstance firstFeature) {
 				FeatureInstance lastFeature = getLastFeature(etei);
 				if (lastFeature != null) {
 					match = isSameorContains(lastFeature, firstFeature);
@@ -1217,34 +1487,29 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 
 	private boolean isSameorContains(FeatureInstance flowFeature, FeatureInstance connFeature) {
 		EObject matchme = connFeature;
-		while (matchme instanceof FeatureInstance) {
-			if (matchme == flowFeature) {
+		while (matchme instanceof FeatureInstance featureInstance) {
+			if (featureInstance == flowFeature) {
 				return true;
 			}
-			matchme = matchme.eContainer();
+			matchme = featureInstance.eContainer();
 		}
 		return false;
 	}
 
 	private FeatureInstance getLastFeature(EndToEndFlowInstance etei) {
 		EList<FlowElementInstance> feis = etei.getFlowElements();
-		FeatureInstance lastFeature = null;
-
-		if (!feis.isEmpty()) {
-			FlowElementInstance lastElement = feis.get(feis.size() - 1);
-
-			if (lastElement instanceof EndToEndFlowInstance) {
-				lastFeature = getLastFeature((EndToEndFlowInstance) lastElement);
-			} else if (lastElement instanceof FlowSpecificationInstance) {
-				lastFeature = ((FlowSpecificationInstance) lastElement).getDestination();
-			} else if (lastElement instanceof ConnectionInstance) {
-				ConnectionInstanceEnd dst = ((ConnectionInstance) lastElement).getDestination();
-				if (dst instanceof FeatureInstance) {
-					lastFeature = (FeatureInstance) dst;
-				}
-			}
+		if (feis.isEmpty()) {
+			return null;
 		}
-		return lastFeature;
+
+		return switch (feis.getLast()) {
+		case EndToEndFlowInstance nested -> getLastFeature(nested);
+		case FlowSpecificationInstance flowSpecification -> flowSpecification.getDestination();
+		case ConnectionInstance connection -> connection.getDestination() instanceof FeatureInstance featureInstance
+				? featureInstance
+				: null;
+		case null, default -> null;
+		};
 	}
 
 	// -------------------------------------------------------------------------
@@ -1252,15 +1517,15 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 	// -------------------------------------------------------------------------
 
 	/**
-	 * build mode instance list from mode list relative to the component
-	 * instance ci
+	 * Resolve an element's mode constraints relative to a component instance. If the element has no explicit modes, use
+	 * the nearest containing component instance with inherited mode constraints.
 	 *
-	 * @param ci Component Instance
-	 * @param mlist mode list
+	 * @param ci the component instance used to resolve modes
+	 * @param e the modal declarative element
 	 * @return list of mode instances
 	 */
 	protected EList<ModeInstance> getModeInstances(ComponentInstance ci, ModalElement e) {
-		EList<ModeInstance> mis = new BasicEList<ModeInstance>();
+		EList<ModeInstance> mis = new BasicEList<>();
 		List<Mode> mlist = e.getAllInModes();
 
 		if (!mlist.isEmpty()) {
@@ -1272,7 +1537,7 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 				}
 			}
 		} else {
-			// get modes form containment hierarchy
+			// Get modes from the containment hierarchy.
 			while (!(ci instanceof SystemInstance)) {
 				if (ci.getInModes().isEmpty()) {
 					ci = ci.getContainingComponentInstance();
@@ -1293,63 +1558,27 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 
 		// first, calculate intersection of all connection and ete instance SOMs
 		EList<FlowElementInstance> feis = etei.getFlowElements();
-		List<SystemOperationMode> soms = new ArrayList<SystemOperationMode>(
-				etei.getSystemInstance().getSystemOperationModes());
+		List<SystemOperationMode> soms = new ArrayList<>(etei.getSystemInstance().getSystemOperationModes());
 
 		for (FlowElementInstance fei : feis) {
-			List<SystemOperationMode> newSoms = new ArrayList<SystemOperationMode>();
-
-			if (fei instanceof ConnectionInstance) {
-				ConnectionInstance conni = (ConnectionInstance) fei;
-
-				if (conni.getInSystemOperationModes().isEmpty()) {
-					continue;
+			if (fei instanceof ConnectionInstance conni) {
+				if (!conni.getInSystemOperationModes().isEmpty()) {
+					soms.removeIf(som -> !conni.getInSystemOperationModes().contains(som));
 				}
-				for (SystemOperationMode som : soms) {
-					if (conni.getInSystemOperationModes().contains(som)) {
-						newSoms.add(som);
-					}
+			} else if (fei instanceof EndToEndFlowInstance efi) {
+				if (!efi.getInSystemOperationModes().isEmpty()) {
+					soms.removeIf(som -> !efi.getInSystemOperationModes().contains(som));
 				}
-			} else if (fei instanceof EndToEndFlowInstance) {
-				EndToEndFlowInstance efi = (EndToEndFlowInstance) fei;
-
-				if (efi.getInSystemOperationModes().isEmpty()) {
-					continue;
-				}
-				for (SystemOperationMode som : soms) {
-					if (efi.getInSystemOperationModes().contains(som)) {
-						newSoms.add(som);
-					}
-				}
-			} else {
-				continue;
 			}
-			soms = newSoms;
 		}
 
 		// then, keep those SOMs where all other flow elements are active
 		for (FlowElementInstance fei : feis) {
-			List<SystemOperationMode> newSoms = new ArrayList<SystemOperationMode>();
-			if (fei instanceof FlowSpecificationInstance) {
-				FlowSpecificationInstance fsi = (FlowSpecificationInstance) fei;
-
-				for (SystemOperationMode som : soms) {
-					if (fsi.isActive(som)) {
-						newSoms.add(som);
-					}
-				}
-			} else if (fei instanceof ComponentInstance) {
-				ComponentInstance ci = (ComponentInstance) fei;
-
-				for (SystemOperationMode som : soms) {
-					if (ci.isActive(som)) {
-						newSoms.add(som);
-					}
-				}
-			} else {
-				continue;
+			if (fei instanceof FlowSpecificationInstance fsi) {
+				soms.removeIf(som -> !fsi.isActive(som));
+			} else if (fei instanceof ComponentInstance ci) {
+				soms.removeIf(som -> !ci.isActive(som));
 			}
-			soms = newSoms;
 		}
 
 		// finally, keep those SOMs where the ete and used flow implementations are active
@@ -1374,18 +1603,6 @@ public class CreateEndToEndFlowsSwitch extends AadlProcessingSwitchWithProgress 
 			}
 		}
 		return true;
-	}
-
-	// -------------------------------------------------------------------------
-	// Stack utilities
-	// -------------------------------------------------------------------------
-
-	private Stack<FlowIterator> clone(Stack<FlowIterator> state) {
-		Stack<FlowIterator> clone = new Stack<FlowIterator>();
-		for (int i = 0; i < state.size(); i++) {
-			clone.push(state.get(i).clone());
-		}
-		return clone;
 	}
 
 }
